list layout completed
list's layout compeleted

--- a/ehda-list/resources/sass/_base.scss
+++ b/ehda-list/resources/sass/_base.scss
@@ -1,5 +1,59 @@
-/*
-*-------------------------------------------------------
-* Basic Project Components
-*-------------------------------------------------------
-*/
+/////////////////////////////////////////////////
+//                                             //
+//                    BASE                     //
+//                                             //
+//        Site-wide mixins and functions       //
+//                                             //
+/////////////////////////////////////////////////
+
+
+$color__white: #FFFFFF;
+$color__black: #000000;
+
+$color__green: #88AC2E;
+
+$color__blue: #3397b9;
+
+$color__blue-gray: #28323e;
+$color__blue-gray--dark: #212a35;
+
+$color__gray--light: #9daeb8;
+$color__gray--dark: #58595B;
+
+
+// extendable classes
+.list-reset{
+  margin:0;
+  padding: 0;
+  list-style-type: none;
+}
+
+
+
+// ## Calculates em size based on required pixel size and context.
+// $target: (required) Required pixel size
+// $context: (optional) Current font size used to calculate em value
+// Returns: Em value
+@function calc-em($target, $context: $base__font-size) {
+  @return ($target / $context) * 1em;
+}
+
+// Clear fix
+@mixin clearfix() {
+  &:before,
+  &:after {
+    content: " ";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+}
+
+// Transition Cross Browser
+@mixin transition($transition...) {
+  -moz-transition:    $transition;
+  -o-transition:      $transition;
+  -webkit-transition: $transition;
+  transition:         $transition;
+}
