--- a/ehda-list/resources/sass/modules/_content.scss
+++ b/ehda-list/resources/sass/modules/_content.scss
@@ -5,7 +5,7 @@
 */
 
 .b-content{
-  padding: 100px 80px;
+  padding: 100px 80px 0;
 
   input[type=number]::-webkit-inner-spin-button,
   input[type=number]::-webkit-outer-spin-button {
@@ -64,14 +64,19 @@
     .search-alert{
       margin-top: 20px;
       display: none;
+      .close{
+        top:4px;
+      }
     }
   }
 
   .b-content-table{
-    margin: 100px 0;
+    margin: 100px 0 0;
     padding: 50px;
     border: 1px solid #ddd;
     border-radius: 10px;
+    max-height: 600px;
+    overflow-y: scroll;
 
     td,
     th{
@@ -85,7 +90,11 @@
       direction: ltr;
       width: 200px;
     }
-
+    .td-submit{
+      .fa-refresh{
+        color: $color__gray--dark;
+      }
+    }
 
     // Status Classes
     .entered{
